src/main/java/com/example/bankcards/exception/errors/NotFoundError.java
package com.example.bankcards.exception.errors;

/**
 * Перечисление, определяющее типы ошибок, связанных с отсутствием запрашиваемого ресурса (Not Found).
 * <p>
 * Каждый элемент перечисления представляет собой конкретную ошибку,
 * которая возникает, когда ресурс не может быть найден в системе,
 * и содержит соответствующее сообщение для пользователя на русском языке.
 * </p>
 */
public enum NotFoundError {

    CARD_NOT_FOUND("Карта не найдена"),
    BLOCK_REQUEST_NOT_FOUND("Запрос на блокировку не найден."),
    USER_NOT_FOUND("Пользователь не был найден");

    /**
     * Сообщение об ошибке, предназначенное для отображения пользователю.
     */
    private final String message;

    /**
     * Конструктор для инициализации элемента перечисления с сообщением.
     *
     * @param message Сообщение об ошибке.
     */
    NotFoundError(String message) {
        this.message = message;
    }

    /**
     * Возвращает сообщение об ошибке.
     *
     * @return Строка с текстом ошибки.
     */
    public String getMessage() {
        return message;
    }
}
